Fix for Bug 17644 [INLINE-H] negative text-indent paragraphs starting with images, r=dbaron, sr=roc+moz